<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coffee Counter</string>

    <string name="action_list">List</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_counters_title">Today</string>
    <string name="fragment_counters_button_count">Count</string>
    <string name="fragment_counters_details_min_title">Minimum</string>
    <string name="fragment_counters_details_max_title">Maximum</string>
    <string name="fragment_counters_details_average_title">Average</string>

    <string name="fragment_list_empty">No results</string>

    <string name="toast_counter_incremented">Counter updated</string>
    <string name="toast_entry_deleted">Entry removed</string>

    <string name="dialog_entry_confirm_delete_title">Delete entry</string>
    <string name="dialog_entry_confirm_delete_message">Are you sure you wish to delete this entry?</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

</resources>
