<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_scroll_counter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#FF0000"
    android:scrollbarStyle="outsideOverlay">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_layout_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true">

        <!-- title -->
        <TextView
            android:id="@+id/fragment_counter_title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/fragment_counters_title"
            android:textSize="36sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <!-- counter -->
        <TextView
            android:id="@+id/fragment_counter_amount"
            android:layout_below="@+id/fragment_counter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin_2x"
            android:paddingRight="@dimen/activity_vertical_margin_2x"
            android:background="@drawable/rectangle_white"
            android:gravity="center"
            android:text="0"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- button -->
        <Button
            android:id="@+id/fragment_counter_button_count"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_counter_amount"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/fragment_counters_button_count"
            android:textColor="#FFFFFF" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_2x"
            android:layout_marginBottom="@dimen/activity_vertical_margin_2x"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/fragment_counter_button_count"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangle_white" >

            <TableRow>

                <!-- min title -->
                <TextView
                    android:id="@+id/fragment_counter_details_min_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/fragment_counters_details_min_title"
                    android:textSize="24sp"
                    android:textColor="#000000" />

                <!-- min amount -->
                <TextView
                    android:id="@+id/fragment_counter_details_min_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>

                <!-- max title -->
                <TextView
                    android:id="@+id/fragment_counter_details_max_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/fragment_counters_details_max_title"
                    android:textSize="24sp"
                    android:textColor="#000000" />

                <!-- max amount -->
                <TextView
                    android:id="@+id/fragment_counter_details_max_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>

                <!-- average title -->
                <TextView
                    android:id="@+id/fragment_counter_details_average_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/fragment_counters_details_average_title"
                    android:textSize="24sp"
                    android:textColor="#000000" />

                <!-- average amount -->
                <TextView
                    android:id="@+id/fragment_counter_details_average_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</ScrollView>